bk_ida/gccida/c1/load_killed_in_block_p
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/load_killed_in_block_p/src/gcse.c:1970:20: error: use of undeclared identifier 'uid_cuid_1'
v7 = *( ( _DWORD *)uid_cuid_1 + *( int *)( v5->fld[0].rtwint + 8)); 
                   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/load_killed_in_block_p/src/gcse.c:1979:12: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v5 = ( rtx)v5[1]; 
           ^~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/load_killed_in_block_p/src/gcse.c:1983:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v9.rtwint = ( __int64)v5->fld[0]; 
                      ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/load_killed_in_block_p/src/gcse.c:1992:12: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v5 = ( rtx)v5[1]; 
           ^~~~~
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/load_killed_in_block_p/src/obj/gcse.o] Error 1
